--- a/src/popup.html
+++ b/src/popup.html
@@ -7,7 +7,7 @@
 
   <body style="width: 600px">
     <h2>FB Hide Reels v<span class="app_version"></span></h2>
-    <p>Set query selector for the item you want hide</p>
+    <p>Set query selector for the item you want to hide</p>
 
     <p>
       Reels Label in Menu:
